tests-extension/test/qe/testdata/egressfirewall-multiDomain.yaml
kind: EgressFirewall
apiVersion: k8s.ovn.org/v1
metadata:
  name: default
spec:
  egress:
  - type: Allow
    to:
      dnsName: registry-1.docker.io
  - type: Allow
    to:
      dnsName: www.facebook.com
    ports:
      - protocol: TCP
        port: 443
  - type: Deny
    to:
      cidrSelector: 0.0.0.0/0
  - type: Deny
    to:
      cidrSelector: ::/0
