tests-extension/test/qe/testdata/testpod-60350.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: testpod-60350
  labels:
    app: testpod-60350
spec:
  automountServiceAccountToken: false
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: testpod-60350
    image: quay.io/openshifttest/busybox@sha256:c5439d7db88ab5423999530349d327b04279ad3161d7596d2126dfb5b02bfd1f
    securityContext:
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
      capabilities:
        drop:
        - ALL
    resources:
      requests:
        cpu: 10m
        memory: 32Mi
      limits:
        cpu: 100m
        memory: 64Mi
    readinessProbe:
      exec:
        command: ['sh', '-c', 'true']
      initialDelaySeconds: 1
      periodSeconds: 5
    livenessProbe:
      exec:
        command: ['sh', '-c', 'true']
      initialDelaySeconds: 5
      periodSeconds: 10
    command: ['sh', '-c', 'echo The app is running! && sleep 3600']
  dnsPolicy: ClusterFirst
  dnsConfig:
     searches: [8th.com, 9th.com, 10th.com, 11th.com, 12th.com, 13th.com, 14th.com, 15th.com, 16th.com, 17th.com, 18th.com, 19th.com, 20th.com, 21th.com, 22th.com, 23th.com, 24th.com, 25th.com, 26th.com, 27th.com, 28th.com, 29th.com, 30th.com, 31th.com, 32th.com]
