tests-extension/test/qe/testdata/testpod-60492.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: testpod-60492
  labels:
    app: testpod-60492
spec:
  automountServiceAccountToken: false
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: testpod-60492
    image: quay.io/openshifttest/busybox@sha256:c5439d7db88ab5423999530349d327b04279ad3161d7596d2126dfb5b02bfd1f
    securityContext:
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
      capabilities:
        drop:
        - ALL
    resources:
      requests:
        cpu: 10m
        memory: 32Mi
      limits:
        cpu: 100m
        memory: 64Mi
    readinessProbe:
      exec:
        command: ['sh', '-c', 'true']
      initialDelaySeconds: 1
      periodSeconds: 5
    livenessProbe:
      exec:
        command: ['sh', '-c', 'true']
      initialDelaySeconds: 5
      periodSeconds: 10
    command: ['sh', '-c', 'echo The app is running! && sleep 3600']
  dnsPolicy: ClusterFirst
  dnsConfig:
     searches: [aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc.ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd]
