tests-extension/test/qe/testdata/web-server-v4v6rc.yaml
apiVersion: v1
kind: List
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      name: web-server-v4v6rc
    name: web-server-v4v6rc
  spec:
    replicas: 1
    selector:
      matchLabels:
        name: web-server-v4v6rc
    template:
      metadata:
        labels:
          name: web-server-v4v6rc
      spec:
        automountServiceAccountToken: false
        securityContext:
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        containers:
        - image: quay.io/openshifttest/nginx-alpine@sha256:cee6930776b92dc1e93b73f9e5965925d49cff3d2e91e1d071c2f0ff72cbca29
          name: nginx
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
          readinessProbe:
            httpGet:
              port: 8080
              path: /
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              port: 8080
              path: /
            initialDelaySeconds: 5
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      name: service-securev4v6
    name: service-securev4v6
  spec:
    ipFamilyPolicy: PreferDualStack
    ports:
    - name: https
      port: 27443
      protocol: TCP
      targetPort: 8443
    selector:
      name: web-server-v4v6rc
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      name: service-unsecurev4v6
    name: service-unsecurev4v6
  spec:
    ipFamilyPolicy: PreferDualStack
    ports:
    - name: http
      port: 27017
      protocol: TCP
      targetPort: 8080
    selector:
      name: web-server-v4v6rc
